# pyBiester

./: .coverage  README.md  pyproject.toml
pyBiester/: BENE_sample_client.py  THILOS_sample_client.py  beneTest.py  sample_client.py  sample_client_one.py  sample_client_two.py  simu_duy  simulation.py  strategy_one.py  strategy_two.py  test_strategy_small_one.py
pyBiester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: calc_max_diff.py  start.sh
tests/: __init__.py  test_bene_strategie.py  test_strategy_one.py  test_strategy_two.py  test_thilos_strategy.py
