
# setup file for project pymonster

[build-system]
    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[tool.setuptools]
    packages=["pyBiester"]

[project]
    name = "pyBiester"
    version = "0.0.1"
    description = "A great project"
    readme = "README.md" 
    requires-python = ">=3.10, <4"
    authors = [
        {name = "Name 1", email = "email1@bla.com"},
        {name = "Name 2", email = "email2@bla.com"},
    ]
    maintainers = [
        {name = "Name 1", email = "email1@bla.com"},
        {name = "Name 2", email = "email2@bla.com"},
    ]
    keywords=["example", "project structure"]
    dependencies = [
        "setuptools>=61",
    ]

[project.scripts]
    biester_client= "..."
